Envoi des informations du formulaire vers le backend depuis le frontend

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
+#Base de données
 PGUSER=snipshare
 PGPASSWORD=snipshare123
+
+#Backend
+BACKEND_CORS_ALLOWED=BACKEND_CORS_ALLOWED
+
+#Frontend
+FRONTEND_VITE_API_URL=http://localhost:3000
