--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
 		"cors": "^2.8.5",
 		"express": "^5.1.0",
 		"pg": "^8.16.3",
-		"tsx": "^4.20.6"
+		"tsx": "^4.20.6",
+		"zod": "^4.1.12"
 	},
 	"scripts": {
 		"dev": "tsx --watch ./index.ts"
