--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
 	"dependencies": {
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
+		"dotenv": "^17.2.3",
 		"express": "^5.1.0",
 		"pg": "^8.16.3",
 		"tsx": "^4.20.6",
