Écriture des snippets en base de données Modificartions des noms du body request pour récupération des données en back

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 #Base de données
-PGUSER=snipshare
-PGPASSWORD=snipshare123
+PGUSER=PGUSER
+PGPASSWORD=PGPASSWORD
+PGHOST=PGHOST
+PGDATABASE=PGDATABASE
 
 #Backend
 BACKEND_CORS_ALLOWED=BACKEND_CORS_ALLOWED
