--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,10 @@
-#Base de données
-PGUSER=PGUSER
-PGPASSWORD=PGPASSWORD
-PGHOST=PGHOST
-PGDATABASE=PGDATABASE
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=secret
+POSTGRES_DB=app_db
+POSTGRES_HOST=db
+ADMINER_PORT=8080
 
-#Backend
-BACKEND_CORS_ALLOWED=BACKEND_CORS_ALLOWED
+BACKEND_PORT=3000
 
-#Frontend
-FRONTEND_VITE_API_URL=http://localhost:3000
+FRONTEND_PORT=5173
+VITE_API_SERVER=http://localhost:3000
