--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,21 +1,13 @@
 services:
   adminer:
     image: adminer
-    networks:
-      - data
     restart: on-failure
-    depends_on:
-      - db
     ports:
       - ${ADMINER_PORT}
 
   db:
-    image: postgres:18-alpine
-    networks:
-      - data
+    image: postgres:16-alpine3.22
     restart: on-failure
-    volumes:
-      - ./db-dev:/var/lib/postgresql
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -23,8 +15,6 @@ services:
 
   backend:
     restart: on-failure
-    networks:
-      - data
     build:
       context: backend
     environment:
@@ -32,6 +22,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_HOST=${POSTGRES_HOST}
       - POSTGRES_DB=${POSTGRES_DB}
+      - HOST_URL=${HOST_URL}
     volumes:
       - ./backend:/app
       - /app/node_modules
@@ -52,5 +43,3 @@ services:
     ports:
       - ${FRONTEND_PORT}
 
-networks:
-  data:
